[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["hadassela1 <hadas@blindspot.security>"]
readme = "README.md"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
apscheduler = "^3.10.4"
secure = "^0.3.0"
pyjwt = "^2.8.0"
cryptography = "^42.0.5"
websockets = "^12.0"
pydantic = "^2.6.4"
load-dotenv = "^0.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
